--- a/index.html
+++ b/index.html
@@ -11,6 +11,51 @@
     <title>Uber</title>
 </head>
 <body>
-   
+   <header>
+        <nav>
+            <div class="container">
+                <ul class="menu">
+                    <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="subheader">
+            <div class="container">    
+                <div class="row">
+                    <div class="col-md-4 offset-md-1">
+                        <a href="#" class="subheader_logo"><img src="img/logoUber.svg" alt="logo"></a>
+                        <div class="subheader_official">Официальный партнер Uber в Москве</div>
+                    </div>
+                    <div class="col-md-2 offset-md-2">
+                        <div class="subheader_call">Звоните нам ежедневно</div>
+                        <a href="tel:84959991408" class="subheader_phone">8 495 999 14 08</a>
+                    </div>
+                    <div class="col-md-2">
+                        <button class="subheader_btn">Заказать звонок</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+   </header>
+   <div class="promo">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <h1 class="promo_header">Компания Uber partners!</h1>
+                    <h2 class="promo_subheadr">пригалшаем водителей! на своем авто!</h2>
+                    <div class="promo_descr">Компания UBER  динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы за пиковое время. 
+                    <br><br>
+                    Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у нас зарабатывают от 80000- 120000 в месяц.</div>
+                    <button class="promo_btn">Отправить заявку!</button>
+                </div>
+            </div>
+        </div>
+   </div>
 </body>
 </html>
