create 2 section aand add scss/sass prep

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
     <title>Uber</title>
 </head>
 <body>
@@ -49,13 +49,125 @@
                 <div class="col-md-10 offset-md-1">
                     <h1 class="promo_header">Компания Uber partners!</h1>
                     <h2 class="promo_subheadr">пригалшаем водителей! на своем авто!</h2>
-                    <div class="promo_descr">Компания UBER  динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы за пиковое время. 
+                    <div class="promo_descr">Компания UBER  динамически развивающаяся. Компания на рынке занимает лидирующее место средитаксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы запиковое время. 
                     <br><br>
-                    Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у нас зарабатывают от 80000- 120000 в месяц.</div>
+                    Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у насзарабатывают от 80000- 120000 в месяц.</div>
                     <button class="promo_btn">Отправить заявку!</button>
                 </div>
             </div>
         </div>
    </div>
+   <!--Reasons-->
+   <div class="reasons">
+        <div class="container">
+            <div class="title">Преимущества</div>
+            <div class="sub_title">8 причин начать работать c нами</div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_img">
+                            <img src="icons/icon.svg" alt="res">
+                        </div>
+                        <div class="reasons_descr">
+                            <span>Никаких наличных, оплата происходит 
+                            <br>автоматически</span>
+                            <br>
+                            Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков связанных с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для размена.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_img">
+                            <img src="icons/icon2.svg" alt="res1">
+                        </div>
+                        <div class="reasons_descr">
+                            <span>Комиссия 8% + БОНУСЫ</span>
+                            <br>
+                            У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые наши конкуренты оставляют бонусы себе.<br> Мы работаем честно и с нами водители зарабатывают больше!
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_img">
+                            <img src="icons/icon2.svg" alt="res2">
+                        </div>
+                        <div class="reasons_descr">
+                            <span>Высокий доход с гарантированными
+                            <br>выплатами</span>
+                            <br>
+                            Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение банковского счета.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_img">
+                            <img src="icons/icon3.svg" alt="res3">
+                        </div>
+                        <div class="reasons_descr">
+                            <span>Работа в удобное время, никаких
+                            <br>графиков</span>
+                            <br>
+                            Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите закончить, нажимаете выйти с линии. Вы можете подраба-<br>
+                            тывать только утром, вечером, в выходные или праздничные дни! 
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_img">
+                            <img src="icons/icon4.svg" alt="res4">
+                        </div>
+                        <div class="reasons_descr">
+                            <span>Комфортное, прозрачное и простое
+                            <br>подключение</span>
+                            <br>
+                            Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать работать!
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_img">
+                            <img src="icons/icon5.svg" alt="res5">
+                        </div>
+                        <div class="reasons_descr">
+                            <span>Всегда большое количество заказов</span>
+                            <br>
+                            Приложение показывает, где на данный момент больше всего заказов и где действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные и абсолютно неконфликтные люди, которых приятно возить.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_img">
+                            <img src="icons/icon6.svg" alt="res6">
+                        </div>
+                        <div class="reasons_descr">
+                            <span>Круглосуточная поддержка</span>
+                            <br>
+                            В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_img">
+                            <img src="icons/icon7.svg" alt="res7">
+                        </div>
+                        <div class="reasons_descr">
+                            <span>Без шашечек и наклеек</span>
+                            <br>
+                            Вам не нужно менять цвет, устанавливать <br><b>«шашки»</b> на автомобиль и обклеивать его наклейками.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+   </div>
+
+   
 </body>
 </html>
