--- a/index.html
+++ b/index.html
@@ -168,6 +168,60 @@
         </div>
    </div>
 
+   <section class="mobile">
+        <div class="container">
+            <div class="title">Возможности</div>
+            <div class="sub_title">мобильное приложение убер</div>
+            <div class="sub_descr">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_1">
+                        <div class="mobile_item_subtitle ">оформление заказа одним касанием</div>
+                        <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_2">
+                        <div class="mobile_item_subtitle">надежная</div>
+                        <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_3">
+                        <div class="mobile_item_subtitle">прозрачные цены</div>
+                        <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_4">
+                        <div class="mobile_item_subtitle">безналичная оплата</div>
+                        <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_5">
+                        <div class="mobile_item_subtitle">обратная связь</div>
+                        <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_6">
+                        <div class="mobile_item_subtitle">разделить стоимость поездки</div>
+                        <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+   </section>
    
+   <section class="car">
+        <div class="container">
+            <div class="title">Возможности</div>
+            <div class="sub_title">Выбор - отличная штука!</div>
+            <div class="sub_descr">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
+            <img class="car_img" src="img/car.png" alt="car">
+            <div class="car_text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
+        </div>
+   </section>
 </body>
 </html>
