add fourth section

--- a/index.html
+++ b/index.html
@@ -223,5 +223,16 @@
             <div class="car_text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
         </div>
    </section>
+
+
+   <section class="world">
+        <div class="container">
+            <div class="title">Города</div>
+            <div class="sub_title">По всему миру</div>
+            <div class="sub_descr">Мы в вашем городе и по всему миру</div>
+            <div class="world_look"><a href="#">Посмотреть все города</a></div>
+        </div>
+   </section>
+
 </body>
 </html>
