ready, remaine adaptation

--- a/index.html
+++ b/index.html
@@ -301,5 +301,35 @@
         </div>
    </section>
 
+   <footer class="footer">
+        <div class="footer_links">
+            <div class="footer_round">
+                <a href="#"><img src="icons/facebook.png" alt="facebook"></a>
+                <a href="#"><img src="icons/twitter.png" alt="twitter"></a>
+                <a href="#"><img src="icons/linkedin.png" alt="linkedin"></a>
+                <a href="#"><img src="icons/instagram.png" alt="instagram"></a>
+            </div>
+        </div>
+        <div class="footer_info">
+            <div class="hr"></div>
+            <div class="footer_descr">
+                <a href="#">на главную</a>
+                <a href="#">города</a>
+                <a href="#">для водил</a>
+            </div>
+            <div class="footer_text">
+                <a href="#">центр поддержки</a>
+                <a href="#">вакансии</a>
+                <a href="#">разработчики</a>
+                <a href="#">блог</a>
+                <a href="#">о нас</a>
+            </div>
+            <span>Русский</span>
+        </div>
+        <div class="footer_app">
+            <div><img src="icons/link.svg" alt="app"></div>
+        </div>
+   </footer>
+
 </body>
 </html>
