--- a/index.html
+++ b/index.html
@@ -23,19 +23,25 @@
                     <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
                 </ul>
             </div>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
         <div class="subheader">
             <div class="container">    
                 <div class="row">
-                    <div class="col-md-4 offset-md-1">
+                    <div class="col-6 col-md-4 offset-md-1">
                         <a href="#" class="subheader_logo"><img src="img/logoUber.svg" alt="logo"></a>
                         <div class="subheader_official">Официальный партнер Uber в Москве</div>
                     </div>
-                    <div class="col-md-2 offset-md-2">
+                    <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
                         <div class="subheader_call">Звоните нам ежедневно</div>
                         <a href="tel:84959991408" class="subheader_phone">8 495 999 14 08</a>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-6 col-md-3 col-lg-2">
+                        <a href="tel:84959991408" class="subheader_phone xs-visible">8 495 999 14 08</a>
                         <button class="subheader_btn">Заказать звонок</button>
                     </div>
                 </div>
@@ -46,7 +52,7 @@
    <div class="promo">
         <div class="container">
             <div class="row">
-                <div class="col-md-10 offset-md-1">
+                <div class="col-md-12 offset-md-0 col-lg-10 offset-lg-1">
                     <h1 class="promo_header">Компания Uber partners!</h1>
                     <h2 class="promo_subheadr">пригалшаем водителей! на своем авто!</h2>
                     <div class="promo_descr">Компания UBER  динамически развивающаяся. Компания на рынке занимает лидирующее место средитаксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы запиковое время. 
@@ -330,6 +336,6 @@
             <div><img src="icons/link.svg" alt="app"></div>
         </div>
    </footer>
-
+   <script src="js/script.js"></script>
 </body>
 </html>
